[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot-style-ajc"
description = 'My personal plotting styles.'
readme = "README.md"
requires-python = ">=3.7"
license = "Unlicense"
keywords = []
authors = [
  { name = "anthonyjclark", email = "anthonyjclark@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/anthonyjclark/plot-style-ajc#readme"
Issues = "https://github.com/anthonyjclark/plot-style-ajc/issues"
Source = "https://github.com/anthonyjclark/plot-style-ajc"

[tool.hatch.version]
path = "plot_style_ajc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=plot_style_ajc --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "plot_style_ajc/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
