[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot-style-ajc"
description = 'My personal plotting styles.'
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense"
keywords = ["plot", "style"]
authors = [
  { name = "anthonyjclark", email = "anthonyjclark@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/anthonyjclark/plot-style-ajc#readme"
Issues = "https://github.com/anthonyjclark/plot-style-ajc/issues"
Source = "https://github.com/anthonyjclark/plot-style-ajc"

[tool.hatch.version]
path = "plot_style_ajc/__about__.py"
